       public name
       surname alias
       photo
    into the Gedcom fields, resp.
       2 GIVN ...
       2 SURN ...
       1 OBJE
         2 FILE ...

* ged2gwb:
  - Delete of duplicated FAMS which sometimes happen in erroneous Gedcoms.
  - Delete families from GEDCOM when parents dont have the good sex..
  - Added displaying of line number (approximative) when unrecognized dates

GeneWeb Version 1.08
--------------------

* Added portuguese among languages (thanks to Yves Guignard).

* gwd:
  - fixed several displaying bugs due to ANSEL
  - in forms, when a precision (about, maybe, before, after, or year) is given
    for a date, the day and month part are ignored, since its works only for
    years (for the moment).
  - photos and background in directory "images" can be installed in a
    subdirectory having the name of the database; ex: "images/martin" for
    the database "martin".
  - display "+" for dead people even if not known date

* gwc, gwu:
  - added backslash as escape character for underscores

* gwc:
  - save much much memory space while running when there are many many notes

* ged2gwb:
  - fixed bug displaying "Uncaught exception: Stream.Error("get to eoln")" when
    the gedcom file did not end with a newline

* consang:
  - more clear message when consang does not work because of loop in database

* doc:
  - added doc for merging databases, persons and families.
  - added doc for databases maintenance.
  - small changes in diruse.htm, server.htm, start.htm

GeneWeb Version 1.07
--------------------

* Added some stuff to allow chinese like languages.
* Started chinese translation
* Added source field for birth, baptism, death, burial, marriage.

* gwd:
  - fixed bug, missing ancestors were printed in reverse order
  - fixed bug, could not find file "start.txt" in -hd directory.
  - fixed bug, missing persons when displaying close names
  - used flags for languages selection instead of tables