@@ -31,6 +31,10 @@ GeneWeb Version 1.09
   - Delete of duplicated FAMS which sometimes happen in erroneous Gedcoms.
   - Delete families from GEDCOM when parents dont have the good sex..
   - Added displaying of line number (approximative) when unrecognized dates
+  - Get sources if pointer (but just the 1st line)
+  - Syntax error messages give the source line input
+  - Added option "-no_nd" (no negative dates), not to interpret years preceded
+    by a minus sign as a negative date
 
 GeneWeb Version 1.08
 --------------------
